# captain_hook

./: .coverage  .gitignore  CONTRIBUTING.md  HOOK_SUMMARY.md  LICENSE  Makefile  QUICKREF.md  README.md  pyproject.toml  submission.md
.github/: README.md
hooks/: README.md  demo.sh  install.sh  pre-commit
src/captain_hook/: __init__.py  calculator.py  example_bad.py  string_utils.py
tests/: __init__.py  test_calculator.py  test_string_utils.py
